# newcom_sales

./: .gitignore  README.md  pyproject.toml
newcom_sales/: hooks.py  modules.txt
newcom_sales/config/: desktop.py  docs.py
newcom_sales/newcom_sales_app/doctype/contact_type/: contact_type.js  contact_type.json  contact_type.py  test_contact_type.py
newcom_sales/newcom_sales_app/doctype/customer_sub_group/: customer_sub_group.js  customer_sub_group.json  customer_sub_group.py  test_customer_sub_group.py
newcom_sales/newcom_sales_app/doctype/customer_sub_group_permissions/: customer_sub_group_permissions.json  customer_sub_group_permissions.py
newcom_sales/newcom_sales_app/doctype/customer_sub_group_user/: customer_sub_group_user.json  customer_sub_group_user.py
newcom_sales/newcom_sales_app/doctype/ncs_customer_contact/: ncs_customer_contact.js  ncs_customer_contact.json  ncs_customer_contact.py  test_ncs_customer_contact.py
newcom_sales/newcom_sales_app/doctype/ncs_customer_nature/: ncs_customer_nature.js  ncs_customer_nature.json  ncs_customer_nature.py  test_ncs_customer_nature.py
newcom_sales/newcom_sales_app/doctype/ncs_sales_data/: ncs_sales_data.js  ncs_sales_data.json  ncs_sales_data.py  test_ncs_sales_data.py
newcom_sales/newcom_sales_app/doctype/ncs_sales_data_item/: ncs_sales_data_item.json  ncs_sales_data_item.py
newcom_sales/newcom_sales_app/doctype/ncs_sales_plan/: ncs_sales_plan.js  ncs_sales_plan.json  ncs_sales_plan.py  test_ncs_sales_plan.py
newcom_sales/public/js/: template.bundle.js
(+11 files in other folders)
